# traffic-observer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/analytics/: vehicle_counter.cpp  vehicle_counter.h
src/core/: frame.h
src/core/pipeline/: ioutput.h  iprocessor.h  pipeline.cpp  pipeline.h  threaded_pipeline.cpp  threaded_pipeline.h
src/core/types/: detection.h  frame.h
src/core/utils/: thread_safe_queue.h
src/logger/: logger.cpp  logger.h
src/messaging/mqtt/: mqtt_publisher.cpp  mqtt_publisher.h
src/outputs/display/: display_output.cpp  display_output.h
src/outputs/logger/: logger_output.cpp  logger_output.h
src/processors/grayscale/: grayscale_processor.cpp  grayscale_processor.h
src/processors/motion/: motion_processor.cpp  motion_processor.h
src/processors/yolo/: yolo_processor.cpp  yolo_processor.h
src/services/video_ingest/: ivideo_reader.h  opencv_reader.cpp  opencv_reader.h
src/trackers/centroid/: centroid_tracker.cpp  centroid_tracker.h
